--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.hrg</groupId>
 	<artifactId>java-watch-sass</artifactId>
-	<version>0.1.5-libsass_3.2.4-SNAPSHOT</version>
+	<version>0.1.5-libsass_3.2.4</version>
 	<name>Java sass command line</name>
 	<description>
 		Java sass command line tool (and libsass usage example) using libsass-maven-plugin. 
