--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.hrg</groupId>
+	<groupId>hr.hrg</groupId>
 	<artifactId>java-watch-sass</artifactId>
-	<version>0.1.5-libsass_3.2.4</version>
+	<version>0.2.4-libsass_3.3.4</version>
 	<name>Java sass command line</name>
 	<description>
 		Java sass command line tool (and libsass usage example) using libsass-maven-plugin. 
@@ -13,7 +13,7 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>org.hrg</groupId>
+			<groupId>hr.hrg</groupId>
 			<artifactId>java-watcher</artifactId>
 			<version>0.1.0</version>
 		</dependency>
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>com.github.warmuuh</groupId>
 			<artifactId>libsass-maven-plugin</artifactId>
-			<version>0.1.5-libsass_3.2.4</version>
+			<version>0.2.4-libsass_3.3.4</version>
 			<!-- we do not need maven plugin parts here, as only the library binding 
 				will be used -->
 			<exclusions>
@@ -54,8 +54,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<optimize>true</optimize>
 				</configuration>
 			</plugin>
@@ -73,7 +73,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>org.hrg.watchsass.Main</mainClass>
+									<mainClass>hr.hrg.watchsass.Main</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
