prepare for maven central

--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>hr.hrg</groupId>
 	<artifactId>java-watch-sass</artifactId>
-	<version>0.2.4-libsass_3.3.4</version>
+	<version>0.2.4-libsass_3.3.4-SNAPSHOT</version>
 	<name>Java sass command line</name>
 	<description>
 		Java sass command line tool (and libsass usage example) using libsass-maven-plugin. 
 		https://github.com/warmuuh/libsass-maven-plugin
 	</description>
+	<url>http://github.com/hrgdavor/java-watch-sass</url>
 
 	<dependencies>
 
@@ -48,6 +49,38 @@
 		</dependency>
 
 	</dependencies>
+
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>https://opensource.org/licenses/MIT</url>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<name>Davor Hrg</name>
+			<email>hrgdavor@gmail.com</email>
+			<organization>Github</organization>
+			<organizationUrl>https://github.com/hrgdavor</organizationUrl>
+		</developer>
+	</developers>
+
+	<scm>
+		<connection>scm:git:git://github.com/hrgdavor/java-watch-sass.git</connection>
+		<developerConnection>scm:git:ssh://github.com:hrgdavor/java-watch-sass.git</developerConnection>
+		<url>http://github.com/hrgdavor/java-watch-sass/tree/master</url>
+	</scm>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+  	</distributionManagement>
 	<build>
 		<plugins>
 			<plugin>
@@ -80,7 +113,82 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.7</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+				</configuration>
+			</plugin>   
 		</plugins>
 	</build>
 
 </project>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
