--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<dependency>
 			<groupId>hr.hrg</groupId>
 			<artifactId>java-watcher</artifactId>
-			<version>0.1.0</version>
+			<version>0.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.slf4j</groupId>
@@ -109,6 +109,8 @@
 									<mainClass>org.hrg.iptunnel.Main</mainClass>
 								</transformer>
 							</transformers>
+							<shadedArtifactAttached>true</shadedArtifactAttached>
+							<shadedClassifierName>shaded</shadedClassifierName>
 						</configuration>
 					</execution>
 				</executions>
