--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>hr.hrg</groupId>
 	<artifactId>java-watch-sass</artifactId>
-	<version>0.2.4-libsass_3.3.4-SNAPSHOT</version>
-	<name>Java sass command line</name>
+	<version>0.2.0</version>
+	<name>Java sass command line using libsass-maven-plugin 0.2.4-libsass_3.3.4</name>
 	<description>
 		Java sass command line tool (and libsass usage example) using libsass-maven-plugin. 
 		https://github.com/warmuuh/libsass-maven-plugin
@@ -16,18 +16,7 @@
 		<dependency>
 			<groupId>hr.hrg</groupId>
 			<artifactId>java-watcher</artifactId>
-			<version>0.2.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.slf4j</groupId>
-		    <artifactId>slf4j-api</artifactId>
-		    <version>1.7.21</version>
-		</dependency>
-
-		<dependency>
-		    <groupId>ch.qos.logback</groupId>
-		    <artifactId>logback-classic</artifactId>
-		    <version>1.1.7</version>
+			<version>0.2.0</version>
 		</dependency>
 
 		<dependency>
@@ -106,7 +95,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>org.hrg.iptunnel.Main</mainClass>
+									<mainClass>hr.hrg.watchsass</mainClass>
 								</transformer>
 							</transformers>
 							<shadedArtifactAttached>true</shadedArtifactAttached>
