--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>hr.hrg</groupId>
 	<artifactId>java-watch-sass</artifactId>
-	<version>0.2.0</version>
+	<version>0.3.0-SNAPSHOT</version>
 	<name>Java sass command line using libsass-maven-plugin 0.2.4-libsass_3.3.4</name>
 	<description>
 		Java sass command line tool (and libsass usage example) using libsass-maven-plugin. 
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>hr.hrg</groupId>
 			<artifactId>java-watcher</artifactId>
-			<version>0.2.0</version>
+			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
